--- a/Login.html
+++ b/Login.html
@@ -19,8 +19,8 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="/CampusConect/index.html">
-                <img src="/CampusConect/assets/logo_cc.ico" class="logo_menu">Campus Conect
+            <a class="navbar-brand" href="index.html">
+                <img src="assets/logo_cc.ico" class="logo_menu">Campus Conect
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
@@ -28,11 +28,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="/CampusConect/index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/CampusConect/index.html">Servicios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/CampusConect/index.html">Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/CampusConect/index.html">Equipo</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/CampusConect/Login.html">Login</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Equipo</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Login.html">Login</a></li>
                 </ul>
             </div>
         </div>
@@ -51,8 +51,8 @@
                     <a href="#">¿Olvidaste tu contraseña?</a>
                 </div>
                 <button>Login</button>
-                <button><a href="/CampusConect/cliente_html/inicio_cliente.html" style="color: white;">Usuario</a></button>
-                <button><a href="/CampusConect/empresa_html/inicio_empresa.html" style="color: white;">Empresa</a></button>
+                <button><a href="cliente_html/inicio_cliente.html" style="color: white;">Usuario</a></button>
+                <button><a href="empresa_html/inicio_empresa.html" style="color: white;">Empresa</a></button>
                 <p>¿No tienes una cuenta? <a href="#" onclick="toggleForms()">Registrarme</a></p>
             </form>
         </div>
