--- a/cliente_html/oferta3.html
+++ b/cliente_html/oferta3.html
@@ -14,7 +14,6 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="../css/stylesBootstrap.css" rel="stylesheet" />
     <link href="../css/styles_inicio_cliente.css" rel="stylesheet" />
-    <link rel="stylesheet" href="../css/styles-historial.css">
 </head>
 <body id="page-top" class="masthead2">
     <!-- Navigation-->
@@ -63,100 +62,39 @@
     </nav>
 <!-------------------------------------------------------------------------->    
 
-    <div class="container form-wrapper" id="login">
-        <div class="searchbar">
-            <input type="text" name="buscador" id="buscador" placeholder="Buscador">
-            <input type="submit" name="buscar" id="buscar">
+<div class="container form-wrapper" id="login">
+    <div class="see-offer">
+        <div class="offer-title">
+            <h4>Desarrollador Backend <span class="sueldo"> 2'350.000</span></h4>
         </div>
-        <div class="filter background">
-            <h3>Filtrado</h3>
-            <div class="filter-content">
-                <h2>Categorias</h2>
-                <select class="select" name="categories-menu" id="categories-menu">
-                    <option class="select-value" value="tecnologia">Tecnologia</option>
-                    <option class="select-value" value="diseño-3D">Diseño 3D</option>
-                    <option class="select-value" value="marketing">Marketing</option>
-                    <option class="select-value" value="contabilidad">Contabilidad</option>
-                    <option class="select-value" value="abogacia">Abogacía</option>
-                </select>
-            </div>
-            <div class="filter-content">
-                <h2>Ubicación</h2>
-                <select class="select" name="country-menu" id="country-menu">
-                    <option class="select-value" value="bquilla">Barranquilla</option>
-                        <option class="select-value" value="bmanga">Bucaramanga</option>
-                        <option class="select-value" value="bogota">Bogotá</option>
-                        <option class="select-value" value="cali">Cali</option>
-                        <option class="select-value" value="cucuta">Cúcuta</option>
-                        <option class="select-value" value="cartagena">Cartagena</option>
-                        <option class="select-value" value="medellin">Medellin</option>
-                </select>
-            </div>
-            <div class="filter-content">
-                <h2>Modalidad</h2>
-                <select class="select" name="mode-menu" id="mode-menu">
-                    <option class="select-value" value="virtual">Virtual</option>
-                    <option class="select-value" value="presencial">Presencial</option>
-                </select>
-            </div>
-            <div class="filter-content">
-                <h2>Habilidades</h2>
-                <label>
-                    <input type="checkbox" name="java" id="java">
-                    <span class="checkbox-style">Java</span>
-                </label>
-                <label>
-                    <input type="checkbox" name="c++" id="c++">
-                    <span class="checkbox-style">C++</span>
-                </label>
-                <label>
-                    <input type="checkbox" name="c#" id="c#">
-                    <span class="checkbox-style">C#</span>
-                </label>
-                <label>
-                    <input type="checkbox" name="python" id="python">
-                    <span class="checkbox-style">Python</span>
-                </label>
-                <label>
-                    <input type="checkbox" name="php" id="php">
-                    <span class="checkbox-style">PHP</span>
-                </label>
-                <label>
-                    <input type="checkbox" name="javascript" id="javascript">
-                    <span class="checkbox-style">JavaScript</span>
-                </label>
-                <label>
-                    <input type="checkbox" name="marketing" id="marketing">
-                    <span class="checkbox-style">Marketing</span>
-                </label>
-                <label>
-                    <input type="checkbox" name="abogacia" id="abogacia">
-                    <span class="checkbox-style">Abogacía</span>
-                </label>
-            </div>
+        <div class="offer-description background">
+            <p class="p-offer">Buscamos un desarrollador backend talentoso para crear, mantener y optimizar los sistemas y servicios que impulsan nuestras aplicaciones. Será responsable de garantizar la escalabilidad, seguridad y funcionalidad del software mientras colabora con otros equipos para cumplir los objetivos del negocio.</p>
+            <textarea rows="8" maxlength="250" placeholder="Escribe tu presentación (250 caracteres)"></textarea>
+            <a href=""><button>Postularme</button></a>
         </div>
-        <div class="offers-box background">
-            <h2 style="text-align: center; margin-top: 10px; margin-bottom: 5px;">Ofertas Disponibles</h2>
-            <h2 style="text-align: center; margin-top: 5px;">____________________________</h2>
-            <div class="offer">
-                <h4>Desarrollador Web <span class="sueldo">2'200.000 $</span></h4>
-                <p class="p-offer">Buscamos un desarrollador web talentoso y motivado para unirse a nuestro equipo. Será responsable de diseñar, desarrollar y mantener aplicaciones y sitios web funcionales, atractivos y optimizados para una experiencia de usuario excepcional.</p>
-                <a href="oferta1.html"><button>Aplicar</button></a>
+        <div class="offer-info background">
+            <h3>Información Oferta</h3>
+            <div class="offer-info-content">
+                <h4>Categoria:</h4>
+                <span>Tecnologia</span>
             </div>
-            <div class="offer">
-                <h4>Analista de datos <span class="sueldo">1'800.000 $</span></h4>
-                <p class="p-offer">Buscamos un analista de datos detallista y orientado a resultados para extraer, procesar y analizar información clave que permita a la empresa tomar decisiones estratégicas. Será responsable de transformar datos en conocimiento práctico y generar informes claros y accionables.</p>
-                <a href="oferta2.html"><button>Aplicar</button></a>
+            <div class="offer-info-content">
+                <h4>Ubicación:</h4>
+                <span>Bogotá, Colombia</span>
             </div>
-            <div class="offer">
-                <h4>Desarrollador Backend <span class="sueldo">2'350.000 $</span></h4>
-                <p class="p-offer">Buscamos un desarrollador backend talentoso para crear, mantener y optimizar los sistemas y servicios que impulsan nuestras aplicaciones. Será responsable de garantizar la escalabilidad, seguridad y funcionalidad del software mientras colabora con otros equipos para cumplir los objetivos del negocio.</p>
-                <a href="oferta3.html"><button>Aplicar</button></a>
+            <div class="offer-info-content">
+                <h4>Correo:</h4>
+                <span>empresa.01@gmail.com</span>
             </div>
+            <div class="offer-info-content">
+                <h4>Modalidad:</h4>
+                <span>Presencial</span>
+            </div> 
         </div>
     </div>
+</div>
 
-    <div class="spacing2"></div>
+<div class="spacing2"></div>
 
 <!-------------------------------------------------------------------------->
     <!-- Footer -->
