--- a/empresa_html/historial_empresa.html
+++ b/empresa_html/historial_empresa.html
@@ -147,10 +147,8 @@
                 </div>
                 <div class="skills-box">
                     <p>Java, Librerías, Conceptos de programación, Backend</p>
-                    <div class="button-container">
-                        <button>Descargar Documentación</button>
-                        <button>Rechazar</button>
-                        <button>Aceptar</button>
+                    <div>
+                        <h4 style="text-align: right; color: white;">Aceptado</h4>
                     </div>
                 </div>
 
@@ -166,10 +164,8 @@
                 </div>
                 <div class="skills-box">
                     <p>Java, Librerías, Conceptos de programación, Backend</p>
-                    <div class="button-container">
-                        <button>Descargar Documentación</button>
-                        <button>Rechazar</button>
-                        <button>Aceptar</button>
+                    <div>
+                        <h4 style="text-align: right; color: white;">Rechazado</h4>
                     </div>
                 </div>
             </div>
@@ -184,10 +180,8 @@
                 </div>
                 <div class="skills-box">
                     <p>Java, Librerías, Conceptos de programación, Backend</p>
-                    <div class="button-container">
-                        <button>Descargar Documentación</button>
-                        <button>Rechazar</button>
-                        <button>Aceptar</button>
+                    <div>
+                        <h4 style="text-align: right; color: white;">Aceptado</h4>
                     </div>
                 </div>
             </div>
