--- a/cliente_html/hoja_de_vida.html
+++ b/cliente_html/hoja_de_vida.html
@@ -14,7 +14,7 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="../css/stylesBootstrap.css" rel="stylesheet" />
     <link href="../css/styles_inicio_cliente.css" rel="stylesheet" />
-    <link rel="stylesheet" href="../css/styles-historial.css">
+    <link rel="stylesheet" href="../css/styles_perfil_cliente.css">
 </head>
 <body id="page-top" class="masthead2">
     <!-- Navigation-->
@@ -63,100 +63,51 @@
     </nav>
 <!-------------------------------------------------------------------------->    
 
-    <div class="container form-wrapper" id="login">
-        <div class="searchbar">
-            <input type="text" name="buscador" id="buscador" placeholder="Buscador">
-            <input type="submit" name="buscar" id="buscar">
-        </div>
-        <div class="filter background">
-            <h3>Filtrado</h3>
-            <div class="filter-content">
-                <h2>Categorias</h2>
-                <select class="select" name="categories-menu" id="categories-menu">
-                    <option class="select-value" value="tecnologia">Tecnologia</option>
-                    <option class="select-value" value="diseño-3D">Diseño 3D</option>
-                    <option class="select-value" value="marketing">Marketing</option>
-                    <option class="select-value" value="contabilidad">Contabilidad</option>
-                    <option class="select-value" value="abogacia">Abogacía</option>
-                </select>
-            </div>
-            <div class="filter-content">
-                <h2>Ubicación</h2>
-                <select class="select" name="country-menu" id="country-menu">
-                    <option class="select-value" value="bquilla">Barranquilla</option>
-                        <option class="select-value" value="bmanga">Bucaramanga</option>
-                        <option class="select-value" value="bogota">Bogotá</option>
-                        <option class="select-value" value="cali">Cali</option>
-                        <option class="select-value" value="cucuta">Cúcuta</option>
-                        <option class="select-value" value="cartagena">Cartagena</option>
-                        <option class="select-value" value="medellin">Medellin</option>
-                </select>
-            </div>
-            <div class="filter-content">
-                <h2>Modalidad</h2>
-                <select class="select" name="mode-menu" id="mode-menu">
-                    <option class="select-value" value="virtual">Virtual</option>
-                    <option class="select-value" value="presencial">Presencial</option>
-                </select>
-            </div>
-            <div class="filter-content">
-                <h2>Habilidades</h2>
-                <label>
-                    <input type="checkbox" name="java" id="java">
-                    <span class="checkbox-style">Java</span>
-                </label>
-                <label>
-                    <input type="checkbox" name="c++" id="c++">
-                    <span class="checkbox-style">C++</span>
-                </label>
-                <label>
-                    <input type="checkbox" name="c#" id="c#">
-                    <span class="checkbox-style">C#</span>
-                </label>
-                <label>
-                    <input type="checkbox" name="python" id="python">
-                    <span class="checkbox-style">Python</span>
-                </label>
-                <label>
-                    <input type="checkbox" name="php" id="php">
-                    <span class="checkbox-style">PHP</span>
-                </label>
-                <label>
-                    <input type="checkbox" name="javascript" id="javascript">
-                    <span class="checkbox-style">JavaScript</span>
-                </label>
-                <label>
-                    <input type="checkbox" name="marketing" id="marketing">
-                    <span class="checkbox-style">Marketing</span>
-                </label>
-                <label>
-                    <input type="checkbox" name="abogacia" id="abogacia">
-                    <span class="checkbox-style">Abogacía</span>
-                </label>
+    <div class="spacing4">
+        <div class="container form-wrapper" id="login">
+            <div class="form-container">
+                <form action="">
+                    <div class="form-input edit-perfil-pic">
+                        <img class="perfil-pic" src="../assets/img/equipo.jpeg" alt="">
+                    </div>
+                    <div class="form-input edit-perfil-pic">
+                        <span>John Doe</span>
+                    </div>
+                    <div class="form-input">
+                        <label for="tel">Teléfono</label>
+                        <input class="input-info" type="tel" name="tel" id="tel" placeholder="3114536127" required>
+                    </div>
+                    <div class="form-input">
+                        <label for="correo">Correo electrónico</label>
+                        <input class="input-info" type="email" name="correo" id="correo" placeholder="example@gmail.com" required>
+                    </div>
+                    <div class="form-input">
+                        <label for="ciudad">Ciudad</label>
+                        <select class="input-info" name="ciudad" id="ciudad">
+                            <option value="bquilla">Barranquilla</option>
+                            <option value="bmanga">Bucaramanga</option>
+                            <option value="bogota">Bogotá</option>
+                            <option value="cali">Cali</option>
+                            <option value="cucuta">Cúcuta</option>
+                            <option value="cartagena">Cartagena</option>
+                            <option value="medellin">Medellin</option>
+                        </select>
+                    </div>
+                    <div class="form-input">
+                        <label for="idiomas">Idiomas</label>
+                        <textarea rows="3" maxlength="200" placeholder="Ingles B2" id="idiomas"></textarea>
+                    </div>
+                    <div class="form-input">
+                        <label for="university">Certificados</label>
+                        <input class="input-info" type="file">
+                    </div>
+                </form>
             </div>
         </div>
-        <div class="offers-box background">
-            <h2 style="text-align: center; margin-top: 10px; margin-bottom: 5px;">Ofertas Disponibles</h2>
-            <h2 style="text-align: center; margin-top: 5px;">____________________________</h2>
-            <div class="offer">
-                <h4>Desarrollador Web <span class="sueldo">2'200.000 $</span></h4>
-                <p class="p-offer">Buscamos un desarrollador web talentoso y motivado para unirse a nuestro equipo. Será responsable de diseñar, desarrollar y mantener aplicaciones y sitios web funcionales, atractivos y optimizados para una experiencia de usuario excepcional.</p>
-                <a href="oferta1.html"><button>Aplicar</button></a>
-            </div>
-            <div class="offer">
-                <h4>Analista de datos <span class="sueldo">1'800.000 $</span></h4>
-                <p class="p-offer">Buscamos un analista de datos detallista y orientado a resultados para extraer, procesar y analizar información clave que permita a la empresa tomar decisiones estratégicas. Será responsable de transformar datos en conocimiento práctico y generar informes claros y accionables.</p>
-                <a href="oferta2.html"><button>Aplicar</button></a>
-            </div>
-            <div class="offer">
-                <h4>Desarrollador Backend <span class="sueldo">2'350.000 $</span></h4>
-                <p class="p-offer">Buscamos un desarrollador backend talentoso para crear, mantener y optimizar los sistemas y servicios que impulsan nuestras aplicaciones. Será responsable de garantizar la escalabilidad, seguridad y funcionalidad del software mientras colabora con otros equipos para cumplir los objetivos del negocio.</p>
-                <a href="oferta3.html"><button>Aplicar</button></a>
-            </div>
+        <div class="form-input edit-perfil-pic">
+            <a href="hoja_de_vida.html"><button>Guardar</button></a>
         </div>
     </div>
-
-    <div class="spacing2"></div>
 
 <!-------------------------------------------------------------------------->
     <!-- Footer -->
