--- a/cliente_html/perfil.html
+++ b/cliente_html/perfil.html
@@ -18,7 +18,7 @@
 </head>
 <body id="page-top" class="masthead2">
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav" style="background-color: rgba(92, 93, 93, 0.789);">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav" style="background-color: rgba(56, 57, 57, 0.789); color: white;">
         <div class="container px-4 px-lg-5">
             <a class="navbar-brand" href="../index.html">
                 <img src="../assets/logo_cc.ico" class="logo_menu">Campus Conect
@@ -75,6 +75,7 @@
             <p class="p-offer">Manuel Alejandro Pinilla Buendia <br> <span>Ingeniería de Sistemas</span></p>
         </div>
     </div>
+    <h2 class="slogan-text">"PROGRAMADOR, JAVA, BACKEND, SQL, TRABAJO EN EQUIPO"</h2>
     <div class="descripcion-personal background">
         <p class="p-offer">"Soy un desarrollador web apasionado por crear soluciones digitales innovadoras y funcionales. Tengo experiencia en el desarrollo tanto front-end como back-end, utilizando tecnologías como HTML, CSS, JavaScript, React, Node.js y bases de datos como MongoDB y MySQL. Me especializo en diseñar interfaces atractivas y en garantizar un rendimiento óptimo en cada proyecto.
         Disfruto colaborar con equipos multidisciplinarios y transformar ideas en experiencias web que impacten positivamente a los usuarios. Soy un aprendiz constante, siempre buscando mejorar mis habilidades y estar al día con las últimas tendencias tecnológicas. Mi objetivo es aportar valor y creatividad en cada línea de código que escribo."</p>
