--- a/empresa_html/crear_oferta.html
+++ b/empresa_html/crear_oferta.html
@@ -18,7 +18,7 @@
 </head>
 <body id="page-top" class="masthead2">
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav" style="background-color: rgb(96, 96, 96);">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav" style="background-color: rgba(56, 57, 57, 0.789); color: white;">
         <div class="container px-4 px-lg-5">
             <a class="navbar-brand" href="../index.html">
                 <img src="../assets/logo_cc.ico" class="logo_menu">Campus Conect
