--- a/empresa_html/inicio_empresa.html
+++ b/empresa_html/inicio_empresa.html
@@ -18,7 +18,7 @@
 </head>
 <body id="page-top" class="masthead2">
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav" style="background-color: rgba(92, 93, 93, 0.789); color: white;">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav" style="background-color: rgba(56, 57, 57, 0.789); color: white;">
         <div class="container px-4 px-lg-5">
             <a class="navbar-brand" href="../index.html">
                 <img src="../assets/logo_cc.ico" class="logo_menu">Campus Conect
@@ -158,10 +158,10 @@
             
             <div class="card-container">
                 <div class="photo-box">
-                    <img src="/assets/img/equipo.jpeg" alt="Foto">
+                    <img src="/assets/img/M3.png" alt="Foto">
                 </div>
                 <div class="content-box">
-                    <h4><a style="text-decoration: none; color: white;" href="/empresa_html/perfil_cliente.html">Juan Pedro Jiménez Lozano</a></h4>
+                    <h4><a style="text-decoration: none; color: white;" href="/empresa_html/perfil_cliente.html">Gabriela Gómez</a></h4>
                     <p>Se necesita programador que maneje el lenguaje de Java y todas las librerías pertinentes para la elaboración de cálculo estadísticos y matemáticos.</p>
                 </div>
                 <div class="skills-box">
@@ -180,6 +180,24 @@
                 </div>
                 <div class="content-box">
                     <h4><a style="text-decoration: none; color: white;" href="/empresa_html/perfil_cliente.html">Juan Pedro Jiménez Lozano</a></h4>
+                    <p>Se necesita programador que maneje el lenguaje de Java y todas las librerías pertinentes para la elaboración de cálculo estadísticos y matemáticos.</p>
+                </div>
+                <div class="skills-box">
+                    <p class="Requerimientos">Java, Librerías, Conceptos de programación, Backend</p>
+                    <div class="button-container">
+                        <button>Descargar Documentación</button>
+                        <button>Rechazar</button>
+                        <button>Aceptar</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-container">
+                <div class="photo-box">
+                    <img src="/assets/img/M3.png" alt="Foto">
+                </div>
+                <div class="content-box">
+                    <h4><a style="text-decoration: none; color: white;" href="/empresa_html/perfil_cliente.html">Gabriela Gómez</a></h4>
                     <p>Se necesita programador que maneje el lenguaje de Java y todas las librerías pertinentes para la elaboración de cálculo estadísticos y matemáticos.</p>
                 </div>
                 <div class="skills-box">
