--- a/empresa_html/perfil_empresa.html
+++ b/empresa_html/perfil_empresa.html
@@ -18,7 +18,7 @@
 </head>
 <body id="page-top" class="masthead2">
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav" style="background-color: rgba(92, 93, 93, 0.789);">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav" style="background-color: rgba(56, 57, 57, 0.789); color: white;">
         <div class="container px-4 px-lg-5">
             <a class="navbar-brand" href="../index.html">
                 <img src="../assets/logo_cc.ico" class="logo_menu">Campus Conect
@@ -75,34 +75,35 @@
             <p class="p-offer" style="text-align: center;">Alphora Technologies <br> <span>"Imaginamos, creamos y transformamos con Inteligencia Artificial"</span></p>
         </div>
     </div>
+    <h2 class="slogan-text">"Imaginamos, creamos y transformamos con Inteligencia Artificial"</h2>
     <div class="descripcion-personal background">
         <p class="p-offer">"Somos una empresa apasionada por crear soluciones digitales innovadoras y funcionales que impulsen el éxito de nuestros clientes. Contamos con una sólida experiencia en el desarrollo tanto de front-end como de back-end, utilizando tecnologías de vanguardia como HTML, CSS, JavaScript, React, Node.js, y bases de datos como MongoDB y MySQL.
             Nos especializamos en diseñar interfaces atractivas, intuitivas y en garantizar un rendimiento óptimo en cada proyecto, siempre adaptándonos a las necesidades específicas de cada cliente. Nuestro equipo multidisciplinario se dedica a transformar ideas en experiencias digitales impactantes que generan valor para los usuarios y fortalecen las marcas de nuestros clientes.
             Como empresa, estamos comprometidos con la mejora continua, manteniéndonos al día con las últimas tendencias tecnológicas y buscando constantemente superar las expectativas. Nuestro objetivo es ser un socio confiable y creativo que aporte soluciones digitales estratégicas e innovadoras en cada proyecto que emprendemos." 
             <div class="portfolio-container">
             <div class="portfolio-item">
-                <img src="../assets/img/empresa.jpeg" alt="Proyecto 1">
+                <img src="../assets/img/IAS/IA 6.png" alt="Proyecto 1">
             </div>
             <div class="portfolio-item">
                 <img src="../assets/img/empresa.jpeg" alt="Proyecto 2">
             </div>
             <div class="portfolio-item">
-                <img src="../assets/img/empresa.jpeg" alt="Proyecto 3">
+                <img src="../assets/img/IAS/cerebroIA.png" alt="Proyecto 3">
             </div>
             <div class="portfolio-item">
-                <img src="../assets/img/empresa.jpeg" alt="Proyecto 4">
+                <img src="../assets/img/IAS/IA 1.png" alt="Proyecto 4">
             </div>
             <div class="portfolio-item">
-                <img src="../assets/img/empresa.jpeg" alt="Proyecto 5">
+                <img src="../assets/img/IAS/IA 2.png" alt="Proyecto 5">
             </div>
             <div class="portfolio-item">
-                <img src="../assets/img/empresa.jpeg" alt="Proyecto 5">
+                <img src="../assets/img/IAS/IA 3.png" alt="Proyecto 5">
             </div>
             <div class="portfolio-item">
-                <img src="../assets/img/empresa.jpeg" alt="Proyecto 5">
+                <img src="../assets/img/IAS/IA 4.png" alt="Proyecto 5">
             </div>
             <div class="portfolio-item">
-                <img src="../assets/img/empresa.jpeg" alt="Proyecto 5">
+                <img src="../assets/img/IAS/IA 5.png" alt="Proyecto 5">
             </div>
         </div>
     </div>
