--- a/index.html
+++ b/index.html
@@ -95,15 +95,12 @@
         <h2 class="text-center fw-bold mb-5">Nosotros</h2>  
         <div class="row gx-0 mb-5 align-items-center">
             <!-- Misión -->
-            <div class="col-lg-12 text-center">
+            <div class="col-lg-6 text-center mission-section">
                 <h4 class="fw-bold">Misión</h4>
                 <p class="text-muted mb-4">Lorem ipsum dolor sit amet consectetur adipiscing elit ultricies, elementum convallis dictum sollicitudin natoque consequat duis nascetur, primis aptent posuere taciti netus ut vulputate. Porttitor lacus lacinia nulla fermentum integer hendrerit, et nibh neque quam senectus etiam, erat consequat primis urna cras. Lectus risus auctor felis cras dignissim velit, a facilisi quis id varius interdum purus, montes nisi pharetra conubia congue.</p>
             </div>
-        </div>
-        
-        <div class="row gx-0 align-items-center">
             <!-- Visión -->
-            <div class="col-lg-12 text-center">
+            <div class="col-lg-6 text-center vision-section">
                 <h4 class="fw-bold">Visión</h4>
                 <p class="text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipiscing elit ultricies, elementum convallis dictum sollicitudin natoque consequat duis nascetur, primis aptent posuere taciti netus ut vulputate. Porttitor lacus lacinia nulla fermentum integer hendrerit, et nibh neque quam senectus etiam, erat consequat primis urna cras. Lectus risus auctor felis cras dignissim velit, a facilisi quis id varius interdum purus, montes nisi pharetra conubia congue.</p>
             </div>
@@ -111,41 +108,55 @@
     </div>
 </section>
 
+
 <!--Equipo-->
 <section class="team-section" id="equipo">
-    <div class="overlay"></div> 
     <div class="container px-4 px-lg-5">
-        <h2 class="text-center">Equipo</h2>
-        <div class="row justify-content-center">
-            <div class="col-md-3 team-member">
-                <img src="assets/img/sneider.jpg" alt="Imagen del mienbro 1 Sneider">
-                <p class="team-name">Sneider</p>
+        <h2 class="text-center">Nuestro Equipo</h2>
+        <div class="team-grid">
+            <div class="team-member">
+                <img src="assets/img/sneider.jpg" alt="Sneider">
+                <h3>Sneider</h3>
+                <p>Desarrollador Backend</p>
+                <p class="slogan">"Construyendo la base del futuro digital."</p>
             </div>
-            <div class="col-md-3 team-member">
-                <img src="assets/img/sebas.jpeg" alt="Imagen del mienbro 2 Johan">
-                <p class="team-name">Johan</p>
+            <div class="team-member">
+                <img src="assets/img/sebas.jpeg" alt="Johan">
+                <h3>Johan</h3>
+                <p>Diseñador UX/UI</p>
+                <p class="slogan">"Transformando ideas en experiencias visuales."</p>
             </div>
-            <div class="col-md-3 team-member">
-                <img src="assets/img/alejandro.jpeg" alt="Imagen del mienbro 3 Alejandro">
-                <p class="team-name">Alejandro</p>
+            <div class="team-member">
+                <img src="assets/img/alejandro.jpeg" alt="Alejandro">
+                <h3>Alejandro</h3>
+                <p>Analista de Datos</p>
+                <p class="slogan">"Descifrando patrones, creando estrategias."</p>
             </div>
-            <div class="col-md-3 team-member">
-                <img src="assets/img/cristian.jpeg" alt="Imagen del mienbro 4 Cristian">
-                <p class="team-name">Cristian</p>
+            <div class="team-member">
+                <img src="assets/img/cristian.jpeg" alt="Cristian">
+                <h3>Cristian</h3>
+                <p>Ingeniero DevOps</p>
+                <p class="slogan">"Un puente entre desarrollo y operaciones."</p>
             </div>
-            <div class="col-md-3 team-member">
-                <img src="assets/img/javier.png" alt="Imagen del mienbro 5 Javier">
-                <p class="team-name">Javier</p>
+            <div class="team-member">
+                <img src="assets/img/javier.png" alt="Javier">
+                <h3>Javier</h3>
+                <p>Tester QA</p>
+                <p class="slogan">"Perfeccionando el software, un error a la vez."</p>
             </div>
-            <div class="col-md-3 team-member">
-                <img src="assets/img/sebastian.jpeg" alt="Imagen del mienbro 6 Sebastian">
-                <p class="team-name">Sebastian</p>
+            <div class="team-member">
+                <img src="assets/img/sebastian.jpeg" alt="Sebastian">
+                <h3>Sebastian</h3>
+                <p>Arquitecto de Software</p>
+                <p class="slogan">"Diseñando soluciones, redefiniendo límites."</p>
             </div>
         </div>
     </div>
 </section>
 
-      <!-- Footer -->
+
+
+ <!-- Footer -->
 <footer class="footer_page">
     <div class="container text-center">
         <p class="footer-text">Copyright &copy; CampusConect 2024</p>
