--- a/cliente_html/historial.html
+++ b/cliente_html/historial.html
@@ -66,7 +66,7 @@
     <div class="container form-wrapper" id="login">
         <div class="searchbar">
             <input type="text" name="buscador" id="buscador" placeholder="Buscador">
-            <input type="submit" name="buscar" id="buscar">
+            <input style="background-color:#4F4FB5;" type="submit" name="buscar" id="buscar">
         </div>
         <div class="filter background">
             <h3>Filtrado</h3>
