acomodaciones en empresa

--- a/empresa_html/perfil_cliente.html
+++ b/empresa_html/perfil_cliente.html
@@ -29,10 +29,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" class="text-effect" href="inicio_empresa.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" class="text-effect" href="/empresa_html/perfil_empresa.html">Perfil</a></li>
-                    <li class="nav-item"><a class="nav-link" class="text-effect" href="/empresa_html/crear_oferta.html">Crear Oferta</a></li>
-                    <li class="nav-item"><a class="nav-link" class="text-effect" href="/empresa_html/historial_empresa.html">Historial</a></li>
+                    <li class="nav-item"><a class="nav-link" class="text-effect" href="inicio_cliente.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" class="text-effect" href="perfil.html">Perfil</a></li>
+                    <li class="nav-item"><a class="nav-link" class="text-effect" href="hoja_de_vida.html">Hoja de vida</a></li>
+                    <li class="nav-item"><a class="nav-link" class="text-effect" href="historial.html">Historial</a></li>
                     <li class="nav-item"><a class="nav-link" class="text-effect" href="../index.html">Logout</a></li>
                     <!-- Contenedor de notificaciones -->
                     <li class="nav-item dropdown">
@@ -75,10 +75,8 @@
             <p class="p-offer">Manuel Alejandro Pinilla Buendia <br> <span>Ingeniería de Sistemas</span></p>
         </div>
     </div>
-    
-
+    <h2 class="slogan-text">"PROGRAMADOR, JAVA, BACKEND, SQL, TRABAJO EN EQUIPO"</h2>
     <div class="descripcion-personal background">
-        
         <p class="p-offer">"Soy un desarrollador web apasionado por crear soluciones digitales innovadoras y funcionales. Tengo experiencia en el desarrollo tanto front-end como back-end, utilizando tecnologías como HTML, CSS, JavaScript, React, Node.js y bases de datos como MongoDB y MySQL. Me especializo en diseñar interfaces atractivas y en garantizar un rendimiento óptimo en cada proyecto.
         Disfruto colaborar con equipos multidisciplinarios y transformar ideas en experiencias web que impacten positivamente a los usuarios. Soy un aprendiz constante, siempre buscando mejorar mis habilidades y estar al día con las últimas tendencias tecnológicas. Mi objetivo es aportar valor y creatividad en cada línea de código que escribo."</p>
         <div class="portfolio-container">
@@ -128,7 +126,7 @@
             <span>Cúcuta, Norte de Santander</span>
         </div> 
     </div>
-</div>
+    </div>
 
 <div class="spacing3"></div>
 
